Fix <a> button text vertical alignment.

--- a/stylesheets/page.scss
+++ b/stylesheets/page.scss
@@ -184,6 +184,8 @@ button.inherited {
 		margin-left: -1rem;
 	}
 
+	&:not(button) { line-height: $button-height; }
+
 	&:disabled {
 		cursor: auto;
 		background: $secondary-background;
